--- a/style/style.css
+++ b/style/style.css
@@ -10,12 +10,32 @@ body {
 header {
     background-color: rgb(94, 3, 3);
     margin: 0px;
+    margin-bottom: 50px;
+}
+.logo {
+    height: 60px;
+    border-radius: 50%;
+}
+.contenedorHeader {
     display: flex;
     justify-content: center;
-    margin-bottom: 50px;
-    border-bottom: 20px solid #2c2c2c;
 }
-.imgheader {
+.navbar {
+    background-color: #2c2c2c;
+}
+.nav-link {
+    color: #f7f6eb;
+    font-size: 25px;
+}
+.nav-link:hover {
+    background-color: #f7f6eb;
+    border-radius: 5px;
+}
+.activeSoft {
+    color: #c5c5c0;
+    border-bottom: 3px solid #c5c5c0;
+}
+.imgheaderi {
     height: 100px;
     border-radius: 50%;
     margin-top: 30px;
