--- a/style/style.css
+++ b/style/style.css
@@ -9,54 +9,52 @@ body {
 }
 header {
     background-color: rgb(94, 3, 3);
-    margin: 0px;
     margin-bottom: 50px;
+    height: 200px;
+    width: 100%;
+}
+.contText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    width: 100%;
+}
+.navbar {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.1px);
+    -webkit-backdrop-filter: blur(5.1px);
+    border: 1px solid rgba(255, 255, 255, 0.75);
+}
+.nav-link {
+    font-size: 23px;
+    color: #2c2c2c;
+}
+.nav-link:hover {
+    color: #666565;
 }
 .logo {
     height: 60px;
     border-radius: 50%;
 }
-.contenedorHeader {
-    display: flex;
-    justify-content: center;
-}
-.navbar {
-    background-color: #2c2c2c;
-}
-.nav-link {
-    color: #f7f6eb;
-    font-size: 25px;
-}
-.nav-link:hover {
-    background-color: #f7f6eb;
-    border-radius: 5px;
-}
-.activeSoft {
-    color: #c5c5c0;
-    border-bottom: 3px solid #c5c5c0;
-}
-.imgheaderi {
-    height: 100px;
-    border-radius: 50%;
-    margin-top: 30px;
+.actives {
+    border-bottom: 2px solid #2c2c2c;
 }
 h1 {
-    font-weight: 400;
-    margin:40px 10px 40px 10px;
-    display: inline;
-    color: #fbfae6;
-    padding: 10px;
     text-align: center;
-    font-size: 45px;
     text-decoration: underline;
-    border: 3px solid #2c2c2c;
-    border-radius: 20px;
-    background: rgba(255, 255, 255, 0.2);
+    font-weight: 400;
+    font-size: 40px;
+    padding: 15px;
+    color: #f7f6eb;
+    background: rgba(255, 255, 255, 0.15);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(7.4px);
+    -webkit-backdrop-filter: blur(7.4px);
+    border: 1px solid rgba(255, 255, 255, 0.75);
 }
 main {
     margin: 20px 200px;
@@ -82,23 +80,13 @@ main {
     margin-right: 20px;
     transition: all 0.1s;
 }
-.img2 {
-    border-radius: 50px;
-    height: 350px;
-    width: 350px;
-    transition: all 0.1s;
-}
 .img1:hover {
     height: 355px;
     width: 355px;
     border: 4px solid #2c2c2c;
 }
-.img2:hover {
-    height: 355px;
-    width: 355px;
-    border: 2px solid #2c2c2c;
-}
 .contenedor1 {
+    margin-top: 110px;
     margin-bottom: 40px;
     background: rgba(255, 255, 255, 0.41);
     border-radius: 16px;
@@ -123,4 +111,81 @@ h2 {
     font-size: 30px;
     font-weight:400;
     margin-bottom: 20px;
+}
+@media (min-width: 320px) {
+    main {
+        margin: 0px 10px;
+    }
+    .contenedor2 {
+        flex-wrap: wrap;
+        height: 600px;
+    }
+    .img1 {
+        height: 240px;
+        width: 240px;
+        border-radius: 20px;
+        display: block;
+        margin: 10px auto;
+    }
+    .img1:hover {
+        height: 250px;
+        width: 250px;
+    }
+    .navbar {
+        z-index: 1;
+    }
+    .contenedor1 {
+        margin-top: 110px;
+        z-index: -1;
+    }
+    p {
+        font-size: 17px;
+    }
+}
+@media (min-width: 550px) {
+    .contenedor2 {
+        height: 750px;
+    }
+    main {
+        margin: 20px 100px;
+    }
+    .img1 {
+        height: 320px;
+        width: 320px;
+    }
+    .img1:hover {
+        height: 325px;
+        width: 325px;
+    }
+}
+@media (min-width: 1200px) {
+    main {
+        margin: 20px 200px;
+    }
+    .contenedor2 {
+        flex-wrap: nowrap;
+        height: 400px;
+    }
+    .img1 {
+        height: 350px;
+        width: 350px;
+        border-radius: 50px;
+        display: block;
+        margin: 10px auto;
+        margin-right: 20px;
+    }
+    .img1:hover {
+        height: 355px;
+        width: 355px;
+    }
+    .navbar {
+        z-index: 1;
+    }
+    .contenedor1 {
+        margin-top: 110px;
+        z-index: -1;
+    }
+    p {
+        font-size: 20px;
+    }
 }
