--- a/style/style.css
+++ b/style/style.css
@@ -112,6 +112,30 @@ h2 {
     font-weight:400;
     margin-bottom: 20px;
 }
+.contVideos {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.boxVideos {
+    width: 922px;
+    border-radius: 50px;
+    padding: 20px;
+    background: linear-gradient(to top right, #ccc5b9, #dad8d3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.video {
+    width: 270px;
+    border-radius: 20px;
+    margin-left: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
 @media (min-width: 320px) {
     main {
         margin: 0px 10px;
